new weather api yahoo

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "IntroHCI",
+  "name": "Bech Bum",
   "version": "0.0.1",
-  "author": "Intro HCI Staff",
+  "author": "Team Beach Bum",
 
   "repository": {
     "type": "git",
